Multi-day support for event feed (needs refactoring).

--- a/clients/Android/Grapevine/app/src/main/res/layout/event_list_view.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/event_list_view.xml
@@ -52,6 +52,12 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/event_time"
                 android:text="event time"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/multi_day"
+                android:text="multi-day"
+                android:textColor="@color/multi_day" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
