--- a/clients/Android/Grapevine/app/src/main/res/values/colors.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="event_highlight">#45B773</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
-
+    <color name="multi_day">#8FD384</color>
 </resources>
