--- a/clients/Android/Grapevine/app/src/main/res/layout/login.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/login.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
+                android:hint="@string/prompt_username"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:singleLine="true"
