--- a/clients/Android/Grapevine/app/src/main/res/values/strings_activity_main_login.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/strings_activity_main_login.xml
@@ -2,7 +2,7 @@
     <string name="title_activity_main_login">Sign in</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Log in</string>
     <string name="error_invalid_email">This email address is invalid</string>
