working on getting feeds

--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -693,31 +693,40 @@
                                             <outlet property="textField" destination="3Bg-NC-3cq" id="d14-6Q-hOA"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="feedCell" id="1zd-sj-o9r" customClass="EventTableViewCell" customModule="Grapevine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="172" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="feedCell" rowHeight="80" id="1zd-sj-o9r" customClass="EventTableViewCell" customModule="Grapevine" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="172" width="600" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1zd-sj-o9r" id="Tbe-yI-d8N">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ad-5a-DLU">
-                                                    <rect key="frame" x="566" y="9" width="26" height="26"/>
-                                                    <state key="normal" image="glyphicons-193-circle-remove">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feed Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whq-VM-ibC">
-                                                    <rect key="frame" x="8" y="11" width="76" height="21"/>
+                                                    <rect key="frame" x="8" y="29" width="76" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y8N-V4-6ab">
+                                                    <rect key="frame" x="92" y="6" width="68" height="68"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="68" id="eId-70-H3h"/>
+                                                        <constraint firstAttribute="height" constant="68" id="kOu-KU-aAl"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ad-5a-DLU">
+                                                    <rect key="frame" x="566" y="27" width="26" height="26"/>
+                                                    <state key="normal" image="glyphicons-193-circle-remove">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="whq-VM-ibC" firstAttribute="centerY" secondItem="Tbe-yI-d8N" secondAttribute="centerY" id="Q1l-kB-X1z"/>
                                                 <constraint firstItem="4ad-5a-DLU" firstAttribute="trailing" secondItem="Tbe-yI-d8N" secondAttribute="trailingMargin" id="ZZc-El-r2j"/>
+                                                <constraint firstItem="whq-VM-ibC" firstAttribute="leading" secondItem="Tbe-yI-d8N" secondAttribute="leadingMargin" id="ZrK-Ng-XXX"/>
+                                                <constraint firstItem="whq-VM-ibC" firstAttribute="centerY" secondItem="Tbe-yI-d8N" secondAttribute="centerY" id="cEB-NS-tAA"/>
+                                                <constraint firstItem="y8N-V4-6ab" firstAttribute="leading" secondItem="whq-VM-ibC" secondAttribute="trailing" constant="8" id="gBE-sm-qqF"/>
+                                                <constraint firstItem="y8N-V4-6ab" firstAttribute="centerY" secondItem="Tbe-yI-d8N" secondAttribute="centerY" id="jJT-CX-71O"/>
                                                 <constraint firstItem="4ad-5a-DLU" firstAttribute="centerY" secondItem="Tbe-yI-d8N" secondAttribute="centerY" id="ljy-C3-6fj"/>
-                                                <constraint firstItem="whq-VM-ibC" firstAttribute="leading" secondItem="Tbe-yI-d8N" secondAttribute="leadingMargin" id="mGX-aY-jow"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
